package eu.telecomnancy.carnet;

public interface DialogController {
}
