@startuml Carnet de voyage

package eu.telecomnancy.carnet {

package model {

class Carnet {
  - String title
  - String author
  - LocalDate startDate
  - LocalDate endDate
  - final int days
  - List<String> participants
  - List<DayPage> pages
  + Carnet(String title, String author, LocalDate startDate, LocalDate endDate)
  + fromJSON(JSONObject json)
  + loadFromJSON(String path)
  + addParticipant(String participant)
  + removeParticipant(String participant)
  + setPage(int index, DayPage page)
  + setPage(int index, String title, String description, String photoPath)
  + getPage(int index)
  + getDayDate(int index)
  + toJSON()
  + saveAsJSON(String path)
}

class DayPage {
  - String title
  - String description
  - String photoPath
  + DayPage(String title, String description, String photoPath)
  + DayPage(JSONObject json)
  + toJSON()
}

Carnet "1" *-- "1..*" DayPage

}

class Main {
  + main(String[] args)
  + start(Stage primaryStage)
}

class MainController {
  - Stage primaryStage
  - Carnet carnet
  - onNouveau()
  - onOuvrir()
  - onEnregistrer()
  - onQuitter()
  - onModifier()
  - onExporter()
  - onModeGlobal()
  - onModePage()
  + initialize()
  + loadGlobalView()
  + loadPageView()
  + loadPageView(int index)
  + showAlert(String title, String content, AlertType type)
  + openInfoDialog(String title)
  + openPageDialog(String title, int index)
}

class GlobalViewController {
  - Carnet carnet
  - MainController mainController
  - initialize()
}

class PageViewController {
  - Carnet carnet
  - int index
  - MainController mainController
  - initialize()
  - onModifier()
  - onPrecedent()
  - onSuivant()
}

interface DialogController {}

class InfoDialogController implements DialogController {
}

class PageDialogController implements DialogController {
  - MainController mainController
  - onParcourir()
  - onSupprimer()
}

Main "1" --> "1" MainController

MainController "1" --> "*" GlobalViewController
MainController "1" --> "*" PageViewController
MainController "1" --> "*" InfoDialogController
PageViewController "1" --> "*" PageDialogController

MainController "1" -- "1" Carnet
GlobalViewController "1" -- "1" Carnet
PageViewController "1" -- "1" Carnet

}

@enduml
